pass data by url

--- a/src/app/account/login/login.component.html
+++ b/src/app/account/login/login.component.html
@@ -8,6 +8,12 @@
     <li>
         <a routerLink="../signup">Signup</a>
     </li>
+    <li>
+        <a [routerLink]="[setPasswordLink, userId, userCity]">Set Password Using routerLink</a>
+    </li>
+    <li>
+        <button (click)="setPassword()">Set Password Using Function</button>
+    </li>
 </ul>
 
 <h2>Using <b>navigate</b></h2>
